Fix BigDecimal: dùng BigDecimal.valueOf()  Set pricePerUnit & subtotal đầy đủ khi mock CartItem  testClearShoppingCart_EmptyCart_NoError → deleteAll vẫn phải được gọi  testGetShoppingCart_RemoveReviewsInResponse → DTO phải có 1 item  AddItem_IncrementExistingItem → thêm pricePerUnit để tránh NPE